# GridlyBear

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
react-app/: .firebaserc  .gitignore  babel.confing.js  firebase.json  jest.config.js  jest.polyfills.js  package-lock.json  package.json  setupAfterEnv.js
react-app/functions/: .gitignore  .gitlab-ci.yml  main.py  requirements.txt
react-app/functions/src/: apiHandler.py  jsonParser.py  net.py
react-app/functions/test/: api_test.py  basic_network.json  net_test.py  parse_test.py
react-app/public/: index.html
react-app/src/: App.js  CoreClasses.js  index.js  setupTests.js
react-app/src/css-files/: index.css  style.css
react-app/src/interface-elements/: BatterySettings.js  DeleteButton.js  ExportButton.js  HistoryButton.js  HistoryDrawer.js  ImportButton.js  InfoButton.js  InfoPanel.js  LineSettings.js  LockButton.js  MarkerSettings.js  PolylineDecorator.js  ResetCanvasButton.js  RunButton.js  Scale.js  Search.js  Sidebar.js  Tile.js  ToolElements.js  TransformerSettings.js  WaitingOverlay.js
react-app/src/test/mocks/: iconMappingMock.js  reactLeafletMocks.js
react-app/src/test/src/: App.test.js
react-app/src/utils/: CanvasState.js  api.js  api_interaction.js  constants.js  iconMapping.js
